Abstracted data cleaning thresholds to yml file

--- a/notebooks/plot_ba_load_weather_time_series.ipynb
+++ b/notebooks/plot_ba_load_weather_time_series.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "64309090-3967-472e-a678-036b5e50ae26",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "['AZPS', 'BPAT', 'CISO', 'ERCO', 'FPL', 'ISNE', 'PJM', 'SWPP']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,6 +95,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6648c72b-203d-4213-ba1d-0c8bece8be28",
+   "metadata": {},
+   "source": [
+    "## Set the Data Cleaning Parameters\n",
+    "\n",
+    "The default threshold parameters for clearning the EIA-930 data are in the `data_cleaning_thresholds.yml` stored in the `/data` directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "12a9172c-aa4d-47ee-86f1-574eaffe4d20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum hour-to-hour change compared to the mean = 15\n",
+      "Maximum standard deviations from the mean = 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read in the default data cleaning thresholds from the yml file:\n",
+    "with open((ba_to_process_input_directory + 'data_cleaning_thresholds.yml'), 'r') as dcl:\n",
+    "     data_cleaning_thresholds = yaml.load(dcl, Loader=yaml.FullLoader)\n",
+    "\n",
+    "# Extract the maximum hour-to-hour change (multiples of the mean hour-to-hour change):\n",
+    "hour_to_hour_change = data_cleaning_thresholds.get('hour_to_hour_change')\n",
+    "\n",
+    "# Extract the maximum standard deviation from the mean:\n",
+    "max_std_from_mean = data_cleaning_thresholds.get('max_std_from_mean')\n",
+    "\n",
+    "# Return the values:\n",
+    "print('Maximum hour-to-hour change compared to the mean = ' + str(hour_to_hour_change))\n",
+    "print('Maximum standard deviations from the mean = ' + str(max_std_from_mean))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ea1944f0-95d6-4862-9535-d583cef02b21",
    "metadata": {},
    "source": [
@@ -103,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "id": "bcf793ca-a357-47ee-8a5f-a9f00275b184",
    "metadata": {},
    "outputs": [],
@@ -124,13 +165,13 @@
     "    ba_df.loc[ba_df['Adjusted_Demand_MWh'] == 0, 'Cleaning_Code'] = -9999\n",
     "    ba_df.loc[ba_df['Cleaning_Code'].shift(1) == -9999, 'Demand_Change_MWh'] = 0\n",
     "\n",
-    "    # Log all rows in which the absolute hour-to-hour change in demand is more than 15 times greater than the mean absolute change as -8888:\n",
-    "    ba_df.loc[((abs(ba_df['Demand_Change_MWh']) >= (15*(abs(ba_df['Demand_Change_MWh']).mean()))) & (ba_df['Cleaning_Code'] != -9999)), 'Cleaning_Code'] = -8888\n",
+    "    # Log all rows in which the absolute hour-to-hour change in demand is more than X times greater than the mean absolute change as -8888:\n",
+    "    ba_df.loc[((abs(ba_df['Demand_Change_MWh']) >= (hour_to_hour_change*(abs(ba_df['Demand_Change_MWh']).mean()))) & (ba_df['Cleaning_Code'] != -9999)), 'Cleaning_Code'] = -8888\n",
     "    ba_df.loc[ba_df['Cleaning_Code'].shift(1) == -8888, 'Cleaning_Code'] = 0\n",
     "\n",
-    "    # Log all rows in which the hourly load is more than 7 standard deviations from the mean value as -7777:\n",
-    "    ba_df.loc[ba_df['Adjusted_Demand_MWh'] >= (ba_df['Adjusted_Demand_MWh'].mean() + (7*ba_df['Adjusted_Demand_MWh'].std())), 'Cleaning_Code'] = -7777\n",
-    "    ba_df.loc[ba_df['Adjusted_Demand_MWh'] <= (ba_df['Adjusted_Demand_MWh'].mean() - (7*ba_df['Adjusted_Demand_MWh'].std())), 'Cleaning_Code'] = -7777\n",
+    "    # Log all rows in which the hourly load is more than X standard deviations from the mean value as -7777:\n",
+    "    ba_df.loc[ba_df['Adjusted_Demand_MWh'] >= (ba_df['Adjusted_Demand_MWh'].mean() + (max_std_from_mean*ba_df['Adjusted_Demand_MWh'].std())), 'Cleaning_Code'] = -7777\n",
+    "    ba_df.loc[ba_df['Adjusted_Demand_MWh'] <= (ba_df['Adjusted_Demand_MWh'].mean() - (max_std_from_mean*ba_df['Adjusted_Demand_MWh'].std())), 'Cleaning_Code'] = -7777\n",
     "\n",
     "    # Replace all of the cleaned hours demand with NaN:\n",
     "    ba_df.loc[ba_df['Cleaning_Code'] != 0, 'Cleaned_Demand_MWh'] = np.nan\n",
@@ -144,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "id": "712f3abf-b208-4dc1-911d-0d325d04af92",
    "metadata": {},
    "outputs": [],
@@ -199,7 +240,7 @@
     "    plt.subplot(411)\n",
     "    plt.plot(ba_df['Time_UTC'], ba_df['Adjusted_Demand_MWh'], color='k', linestyle='-', linewidth=0.5)\n",
     "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -9999, 'Time_UTC'], ba_df.loc[ba_df['Cleaning_Code'] == -9999, 'Adjusted_Demand_MWh'], s=50, c='g', label=('Missing Data (N=' + str(missing_data) + ')'))\n",
-    "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -8888, 'Time_UTC'], ba_df.loc[ba_df['Cleaning_Code'] == -8888, 'Adjusted_Demand_MWh'], s=50, c='c', label=('Hour-to-Hour Change > 15x Mean (N=' + str(large_change) + ')'))\n",
+    "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -8888, 'Time_UTC'], ba_df.loc[ba_df['Cleaning_Code'] == -8888, 'Adjusted_Demand_MWh'], s=50, c='c', label=('Hour-to-Hour Change > ' + str(hour_to_hour_change) + 'x Mean (N=' + str(large_change) + ')'))\n",
     "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -7777, 'Time_UTC'], ba_df.loc[ba_df['Cleaning_Code'] == -7777, 'Adjusted_Demand_MWh'], s=50, c='m', label=('Load Outside Mean +/- 7 STD (N=' + str(large_std) + ')'))\n",
     "    plt.xlim([datetime.date(start_year, 1, 1), datetime.date(end_year+1, 1, 1)])\n",
     "    plt.ylim([(ba_df['Adjusted_Demand_MWh'].min() - 0.1*ba_df['Adjusted_Demand_MWh'].min()), (ba_df['Adjusted_Demand_MWh'].max() + 0.1*ba_df['Adjusted_Demand_MWh'].max())])\n",
@@ -245,7 +286,7 @@
     "    plt.grid(True)\n",
     "    plt.scatter(ba_df['T2'], ba_df['Adjusted_Demand_MWh'], s=35, c='k', label=('All Data (N=' + str(ba_df.shape[0]) + ')'))\n",
     "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -9999, 'T2'], ba_df.loc[ba_df['Cleaning_Code'] == -9999, 'Adjusted_Demand_MWh'], s=35, c='g', label=('Missing Data (N=' + str(missing_data) + ')'))\n",
-    "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -8888, 'T2'], ba_df.loc[ba_df['Cleaning_Code'] == -8888, 'Adjusted_Demand_MWh'], s=35, c='c', label=('Hour-to-Hour Change > 15x Mean (N=' + str(large_change) + ')'))\n",
+    "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -8888, 'T2'], ba_df.loc[ba_df['Cleaning_Code'] == -8888, 'Adjusted_Demand_MWh'], s=35, c='c', label=('Hour-to-Hour Change > ' + str(hour_to_hour_change) + 'x Mean (N=' + str(large_change) + ')'))\n",
     "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -7777, 'T2'], ba_df.loc[ba_df['Cleaning_Code'] == -7777, 'Adjusted_Demand_MWh'], s=35, c='m', label=('Load Outside Mean +/- 7 STD (N=' + str(large_std) + ')'))\n",
     "    plt.xlim([(ba_df['T2'].min() - 4), (ba_df['T2'].max() + 4)])\n",
     "    plt.xlabel('Pop-Weighted Temperature [$^\\circ$F]', fontsize=18)\n",
