Added final MLP model

--- a/notebooks/calculate_error_statistics.ipynb
+++ b/notebooks/calculate_error_statistics.ipynb
@@ -119,7 +119,7 @@
     "    ba_df['Year'] = ba_df['Time_UTC'].dt.year  \n",
     "    \n",
     "    # Loop over all the model training windows:\n",
-    "    for model in ['MLP1', 'MLP2', 'MLP3', 'MLP4', 'MLP5', 'MLP6']:\n",
+    "    for model in ['MLP1', 'MLP2', 'MLP3', 'MLP4', 'MLP5', 'MLP6', 'MLP7']:\n",
     "    \n",
     "        # Set the first forward year for each model:\n",
     "        if model == 'MLP1':\n",
@@ -134,12 +134,14 @@
     "           first_forward_year = 2022\n",
     "        if model == 'MLP6':\n",
     "           first_forward_year = 2023\n",
+    "        if model == 'MLP7':\n",
+    "           first_forward_year = 2024\n",
     "\n",
     "        # Subset the data to just the variables needed for that model:\n",
     "        subset_df = ba_df[['BA', 'Time_UTC', 'Demand_MWh', (model + '_MWh'), 'Year']].copy()\n",
     "\n",
-    "        # Loop over the years from the first forward year for that model through 2023:\n",
-    "        for year in range(first_forward_year,2024,1):\n",
+    "        # Loop over the years from the first forward year for that model through 2024:\n",
+    "        for year in range(first_forward_year,2025,1):\n",
     "\n",
     "            # Iterate the counter by one:\n",
     "            counter = counter + 1\n",
