--- a/notebooks/plot_ba_error_evolution.ipynb
+++ b/notebooks/plot_ba_error_evolution.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "27e597e9-538f-41d4-afa9-a268b10ab1df",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bd887600-32da-46dc-b411-fa63c75f564f",
    "metadata": {
     "pycharm": {
@@ -66,10 +66,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "56d2b5ea-9529-49d7-9409-3087056efe99",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AZPS', 'BPAT', 'CISO', 'ERCO', 'FPL', 'ISNE', 'PJM', 'SWPP']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Read the yml file into a dictionary:\n",
     "with open((ba_to_process_input_directory + 'balancing_authority_modeled.yml'), 'r') as yml:\n",
@@ -90,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "086e395e-2bf9-4328-bb14-931b5cba7a61",
    "metadata": {},
    "outputs": [],
@@ -110,6 +121,7 @@
     "    m4_df = ba_df.loc[(ba_df['Model'] == 'MLP4')]\n",
     "    m5_df = ba_df.loc[(ba_df['Model'] == 'MLP5')]\n",
     "    m6_df = ba_df.loc[(ba_df['Model'] == 'MLP6')]\n",
+    "    m7_df = ba_df.loc[(ba_df['Model'] == 'MLP7')]\n",
     "\n",
     "    # Make the plot:\n",
     "    plt.figure(figsize=(35, 20))\n",
@@ -122,12 +134,14 @@
     "    plt.plot(m4_df['Year'], m4_df['RMS_ABS'], color='olivedrab', linestyle='-', label='MLP4 (T19-20)', linewidth=2)\n",
     "    plt.plot(m5_df['Year'], m5_df['RMS_ABS'], color='deepskyblue', linestyle='-', label='MLP5 (T20-21)', linewidth=2)\n",
     "    plt.plot(m6_df['Year'], m6_df['RMS_ABS'], color='blueviolet', linestyle='-', label='MLP6 (T21-22)', linewidth=2)\n",
+    "    plt.plot(m7_df['Year'], m7_df['RMS_ABS'], color='navy', linestyle='-', label='MLP7 (T22-23)', linewidth=2)\n",
     "    plt.scatter(m1_df['Year'], m1_df['RMS_ABS'], s=50, c='black')\n",
     "    plt.scatter(m2_df['Year'], m2_df['RMS_ABS'], s=50, c='firebrick')\n",
     "    plt.scatter(m3_df['Year'], m3_df['RMS_ABS'], s=50, c='darkorange')\n",
     "    plt.scatter(m4_df['Year'], m4_df['RMS_ABS'], s=50, c='olivedrab')\n",
     "    plt.scatter(m5_df['Year'], m5_df['RMS_ABS'], s=50, c='deepskyblue')\n",
     "    plt.scatter(m6_df['Year'], m6_df['RMS_ABS'], s=50, c='blueviolet')\n",
+    "    plt.scatter(m7_df['Year'], m7_df['RMS_ABS'], s=50, c='navy')\n",
     "    plt.legend(loc='upper left', prop={'size': 15})\n",
     "    plt.xlim([2017.75, 2024.25])\n",
     "    plt.ylabel('Root-Mean-Squared Absolute Error [MWh]', fontsize=18)\n",
@@ -142,12 +156,14 @@
     "    plt.plot(m4_df['Year'], m4_df['RMS_NORM'], color='olivedrab', linestyle='-', label='MLP4 (T19-20)', linewidth=2)\n",
     "    plt.plot(m5_df['Year'], m5_df['RMS_NORM'], color='deepskyblue', linestyle='-', label='MLP5 (T20-21)', linewidth=2)\n",
     "    plt.plot(m6_df['Year'], m6_df['RMS_NORM'], color='blueviolet', linestyle='-', label='MLP6 (T21-22)', linewidth=2)\n",
+    "    plt.plot(m7_df['Year'], m7_df['RMS_NORM'], color='navy', linestyle='-', label='MLP7 (T22-23)', linewidth=2)\n",
     "    plt.scatter(m1_df['Year'], m1_df['RMS_NORM'], s=50, c='black')\n",
     "    plt.scatter(m2_df['Year'], m2_df['RMS_NORM'], s=50, c='firebrick')\n",
     "    plt.scatter(m3_df['Year'], m3_df['RMS_NORM'], s=50, c='darkorange')\n",
     "    plt.scatter(m4_df['Year'], m4_df['RMS_NORM'], s=50, c='olivedrab')\n",
     "    plt.scatter(m5_df['Year'], m5_df['RMS_NORM'], s=50, c='deepskyblue')\n",
     "    plt.scatter(m6_df['Year'], m6_df['RMS_NORM'], s=50, c='blueviolet')\n",
+    "    plt.scatter(m7_df['Year'], m7_df['RMS_NORM'], s=50, c='navy')\n",
     "    plt.legend(loc='upper left', prop={'size': 15})\n",
     "    plt.xlim([2017.75, 2024.25])\n",
     "    plt.ylabel('Root-Mean-Squared Normalized Error', fontsize=18)\n",
@@ -162,12 +178,14 @@
     "    plt.plot(m4_df['Year'], m4_df['MAPE'], color='olivedrab', linestyle='-', label='MLP4 (T19-20)', linewidth=2)\n",
     "    plt.plot(m5_df['Year'], m5_df['MAPE'], color='deepskyblue', linestyle='-', label='MLP5 (T20-21)', linewidth=2)\n",
     "    plt.plot(m6_df['Year'], m6_df['MAPE'], color='blueviolet', linestyle='-', label='MLP6 (T21-22)', linewidth=2)\n",
+    "    plt.plot(m7_df['Year'], m7_df['MAPE'], color='navy', linestyle='-', label='MLP7 (T22-23)', linewidth=2)\n",
     "    plt.scatter(m1_df['Year'], m1_df['MAPE'], s=50, c='black')\n",
     "    plt.scatter(m2_df['Year'], m2_df['MAPE'], s=50, c='firebrick')\n",
     "    plt.scatter(m3_df['Year'], m3_df['MAPE'], s=50, c='darkorange')\n",
     "    plt.scatter(m4_df['Year'], m4_df['MAPE'], s=50, c='olivedrab')\n",
     "    plt.scatter(m5_df['Year'], m5_df['MAPE'], s=50, c='deepskyblue')\n",
     "    plt.scatter(m6_df['Year'], m6_df['MAPE'], s=50, c='blueviolet')\n",
+    "    plt.scatter(m7_df['Year'], m7_df['MAPE'], s=50, c='navy')\n",
     "    plt.legend(loc='upper left', prop={'size': 15})\n",
     "    plt.xlim([2017.75, 2024.25])\n",
     "    plt.ylabel('Mean Absolute Percentage Error', fontsize=18)\n",
@@ -182,12 +200,14 @@
     "    plt.plot(m4_df['Year'], m4_df['R2'], color='olivedrab', linestyle='-', label='MLP4 (T19-20)', linewidth=2)\n",
     "    plt.plot(m5_df['Year'], m5_df['R2'], color='deepskyblue', linestyle='-', label='MLP5 (T20-21)', linewidth=2)\n",
     "    plt.plot(m6_df['Year'], m6_df['R2'], color='blueviolet', linestyle='-', label='MLP6 (T21-22)', linewidth=2)\n",
+    "    plt.plot(m7_df['Year'], m7_df['R2'], color='navy', linestyle='-', label='MLP7 (T22-23)', linewidth=2)\n",
     "    plt.scatter(m1_df['Year'], m1_df['R2'], s=50, c='black')\n",
     "    plt.scatter(m2_df['Year'], m2_df['R2'], s=50, c='firebrick')\n",
     "    plt.scatter(m3_df['Year'], m3_df['R2'], s=50, c='darkorange')\n",
     "    plt.scatter(m4_df['Year'], m4_df['R2'], s=50, c='olivedrab')\n",
     "    plt.scatter(m5_df['Year'], m5_df['R2'], s=50, c='deepskyblue')\n",
     "    plt.scatter(m6_df['Year'], m6_df['R2'], s=50, c='blueviolet')\n",
+    "    plt.scatter(m7_df['Year'], m7_df['R2'], s=50, c='navy')\n",
     "    plt.legend(loc='lower left', prop={'size': 15})\n",
     "    plt.xlim([2017.75, 2024.25])\n",
     "    plt.ylim([(ba_df['R2'].min()-0.05), 1])\n",
@@ -211,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "18593f25-974f-47b6-ac17-a04ffec75d1b",
    "metadata": {},
    "outputs": [],
