--- a/notebooks/plot_ba_load_weather_time_series.ipynb
+++ b/notebooks/plot_ba_load_weather_time_series.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 14,
    "id": "086e395e-2bf9-4328-bb14-931b5cba7a61",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
     "    plt.plot(ba_df['Time_UTC'], ba_df['Adjusted_Demand_MWh'], color='k', linestyle='-', linewidth=0.5)\n",
     "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -9999, 'Time_UTC'], ba_df.loc[ba_df['Cleaning_Code'] == -9999, 'Adjusted_Demand_MWh'], s=50, c='g', label=('Missing Data (N=' + str(missing_data) + ')'))\n",
     "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -8888, 'Time_UTC'], ba_df.loc[ba_df['Cleaning_Code'] == -8888, 'Adjusted_Demand_MWh'], s=50, c='c', label=('Hour-to-Hour Change > ' + str(hour_to_hour_change) + 'x Mean (N=' + str(large_change) + ')'))\n",
-    "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -7777, 'Time_UTC'], ba_df.loc[ba_df['Cleaning_Code'] == -7777, 'Adjusted_Demand_MWh'], s=50, c='m', label=('Load Outside Mean +/- 7 STD (N=' + str(large_std) + ')'))\n",
+    "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -7777, 'Time_UTC'], ba_df.loc[ba_df['Cleaning_Code'] == -7777, 'Adjusted_Demand_MWh'], s=50, c='m', label=('Load Outside Mean +/- ' + str(max_std_from_mean) + ' STD (N=' + str(large_std) + ')'))\n",
     "    plt.xlim([datetime.date(start_year, 1, 1), datetime.date(end_year+1, 1, 1)])\n",
     "    plt.ylim([(ba_df['Adjusted_Demand_MWh'].min() - 0.1*ba_df['Adjusted_Demand_MWh'].min()), (ba_df['Adjusted_Demand_MWh'].max() + 0.1*ba_df['Adjusted_Demand_MWh'].max())])\n",
     "    plt.ylabel('EIA 930 Adjusted Demand [MWh]', fontsize=18)\n",
@@ -287,7 +287,7 @@
     "    plt.scatter(ba_df['T2'], ba_df['Adjusted_Demand_MWh'], s=35, c='k', label=('All Data (N=' + str(ba_df.shape[0]) + ')'))\n",
     "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -9999, 'T2'], ba_df.loc[ba_df['Cleaning_Code'] == -9999, 'Adjusted_Demand_MWh'], s=35, c='g', label=('Missing Data (N=' + str(missing_data) + ')'))\n",
     "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -8888, 'T2'], ba_df.loc[ba_df['Cleaning_Code'] == -8888, 'Adjusted_Demand_MWh'], s=35, c='c', label=('Hour-to-Hour Change > ' + str(hour_to_hour_change) + 'x Mean (N=' + str(large_change) + ')'))\n",
-    "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -7777, 'T2'], ba_df.loc[ba_df['Cleaning_Code'] == -7777, 'Adjusted_Demand_MWh'], s=35, c='m', label=('Load Outside Mean +/- 7 STD (N=' + str(large_std) + ')'))\n",
+    "    plt.scatter(ba_df.loc[ba_df['Cleaning_Code'] == -7777, 'T2'], ba_df.loc[ba_df['Cleaning_Code'] == -7777, 'Adjusted_Demand_MWh'], s=35, c='m', label=('Load Outside Mean +/- ' + str(max_std_from_mean) + ' STD (N=' + str(large_std) + ')'))\n",
     "    plt.xlim([(ba_df['T2'].min() - 4), (ba_df['T2'].max() + 4)])\n",
     "    plt.xlabel('Pop-Weighted Temperature [$^\\circ$F]', fontsize=18)\n",
     "    plt.ylim([(ba_df['Adjusted_Demand_MWh'].min() - 0.15*ba_df['Adjusted_Demand_MWh'].min()), (ba_df['Adjusted_Demand_MWh'].max() + 0.15*ba_df['Adjusted_Demand_MWh'].max())])\n",
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "id": "18593f25-974f-47b6-ac17-a04ffec75d1b",
    "metadata": {},
    "outputs": [],
