--- a/notebooks/train_and_run_mlp_models.ipynb
+++ b/notebooks/train_and_run_mlp_models.ipynb
@@ -395,13 +395,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4df28891-b1a0-430a-93b4-afa1e448027a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model =  MLP1 , BA =  AZPS\n",
+      "Model =  MLP1 , BA =  BPAT\n",
+      "Model =  MLP1 , BA =  CISO\n",
+      "Model =  MLP1 , BA =  ERCO\n",
+      "Model =  MLP1 , BA =  FPL\n",
+      "Model =  MLP1 , BA =  ISNE\n",
+      "Model =  MLP1 , BA =  PJM\n",
+      "Model =  MLP1 , BA =  SWPP\n",
+      "Model =  MLP2 , BA =  AZPS\n",
+      "Model =  MLP2 , BA =  BPAT\n",
+      "Model =  MLP2 , BA =  CISO\n",
+      "Model =  MLP2 , BA =  ERCO\n",
+      "Model =  MLP2 , BA =  FPL\n",
+      "Model =  MLP2 , BA =  ISNE\n",
+      "Model =  MLP2 , BA =  PJM\n",
+      "Model =  MLP2 , BA =  SWPP\n",
+      "Model =  MLP3 , BA =  AZPS\n",
+      "Model =  MLP3 , BA =  BPAT\n",
+      "Model =  MLP3 , BA =  CISO\n",
+      "Model =  MLP3 , BA =  ERCO\n",
+      "Model =  MLP3 , BA =  FPL\n",
+      "Model =  MLP3 , BA =  ISNE\n",
+      "Model =  MLP3 , BA =  PJM\n",
+      "Model =  MLP3 , BA =  SWPP\n",
+      "Model =  MLP4 , BA =  AZPS\n",
+      "Model =  MLP4 , BA =  BPAT\n",
+      "Model =  MLP4 , BA =  CISO\n",
+      "Model =  MLP4 , BA =  ERCO\n",
+      "Model =  MLP4 , BA =  FPL\n",
+      "Model =  MLP4 , BA =  ISNE\n",
+      "Model =  MLP4 , BA =  PJM\n",
+      "Model =  MLP4 , BA =  SWPP\n",
+      "Model =  MLP5 , BA =  AZPS\n",
+      "Model =  MLP5 , BA =  BPAT\n",
+      "Model =  MLP5 , BA =  CISO\n",
+      "Model =  MLP5 , BA =  ERCO\n",
+      "Model =  MLP5 , BA =  FPL\n",
+      "Model =  MLP5 , BA =  ISNE\n",
+      "Model =  MLP5 , BA =  PJM\n",
+      "Model =  MLP5 , BA =  SWPP\n",
+      "Model =  MLP6 , BA =  AZPS\n",
+      "Model =  MLP6 , BA =  BPAT\n",
+      "Model =  MLP6 , BA =  CISO\n",
+      "Model =  MLP6 , BA =  ERCO\n",
+      "Model =  MLP6 , BA =  FPL\n",
+      "Model =  MLP6 , BA =  ISNE\n",
+      "Model =  MLP6 , BA =  PJM\n",
+      "Model =  MLP6 , BA =  SWPP\n",
+      "Model =  MLP7 , BA =  AZPS\n",
+      "Model =  MLP7 , BA =  BPAT\n",
+      "Model =  MLP7 , BA =  CISO\n",
+      "Model =  MLP7 , BA =  ERCO\n",
+      "Model =  MLP7 , BA =  FPL\n",
+      "Model =  MLP7 , BA =  ISNE\n",
+      "Model =  MLP7 , BA =  PJM\n",
+      "Model =  MLP7 , BA =  SWPP\n"
+     ]
+    }
+   ],
    "source": [
     "# Run the training iteratively across all training windows and BAs:\n",
-    "for model in ['MLP1', 'MLP2', 'MLP3', 'MLP4', 'MLP5', 'MLP6']:\n",
+    "for model in ['MLP1', 'MLP2', 'MLP3', 'MLP4', 'MLP5', 'MLP6', 'MLP7']:\n",
     "    # Set the training and evaluation periods for the specific model training window:\n",
     "    if model == 'MLP1':\n",
     "       start_time_model = '2016-01-01 00:00:00'\n",
@@ -427,6 +490,10 @@
     "       start_time_model = '2021-01-01 00:00:00'\n",
     "       end_time_model = '2023-12-31 23:00:00'\n",
     "       split_datetime_model = '2022-12-31 23:00:00'\n",
+    "    if model == 'MLP7':\n",
+    "       start_time_model = '2022-01-01 00:00:00'\n",
+    "       end_time_model = '2024-12-31 23:00:00'\n",
+    "       split_datetime_model = '2023-12-31 23:00:00'\n",
     "\n",
     "    # Create the model output directory name:\n",
     "    output_directory = (model_output_directory + model + '/')\n",
@@ -677,13 +744,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f9884d35-ba87-4aa0-8739-e066f5237daf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model =  MLP1 , BA =  AZPS , Year =  2018\n",
+      "Model =  MLP1 , BA =  AZPS , Year =  2019\n",
+      "Model =  MLP1 , BA =  AZPS , Year =  2020\n",
+      "Model =  MLP1 , BA =  AZPS , Year =  2021\n",
+      "Model =  MLP1 , BA =  AZPS , Year =  2022\n",
+      "Model =  MLP1 , BA =  AZPS , Year =  2023\n",
+      "Model =  MLP1 , BA =  AZPS , Year =  2024\n",
+      "Model =  MLP1 , BA =  BPAT , Year =  2018\n",
+      "Model =  MLP1 , BA =  BPAT , Year =  2019\n",
+      "Model =  MLP1 , BA =  BPAT , Year =  2020\n",
+      "Model =  MLP1 , BA =  BPAT , Year =  2021\n",
+      "Model =  MLP1 , BA =  BPAT , Year =  2022\n",
+      "Model =  MLP1 , BA =  BPAT , Year =  2023\n",
+      "Model =  MLP1 , BA =  BPAT , Year =  2024\n",
+      "Model =  MLP1 , BA =  CISO , Year =  2018\n",
+      "Model =  MLP1 , BA =  CISO , Year =  2019\n",
+      "Model =  MLP1 , BA =  CISO , Year =  2020\n",
+      "Model =  MLP1 , BA =  CISO , Year =  2021\n",
+      "Model =  MLP1 , BA =  CISO , Year =  2022\n",
+      "Model =  MLP1 , BA =  CISO , Year =  2023\n",
+      "Model =  MLP1 , BA =  CISO , Year =  2024\n",
+      "Model =  MLP1 , BA =  ERCO , Year =  2018\n",
+      "Model =  MLP1 , BA =  ERCO , Year =  2019\n",
+      "Model =  MLP1 , BA =  ERCO , Year =  2020\n",
+      "Model =  MLP1 , BA =  ERCO , Year =  2021\n",
+      "Model =  MLP1 , BA =  ERCO , Year =  2022\n",
+      "Model =  MLP1 , BA =  ERCO , Year =  2023\n",
+      "Model =  MLP1 , BA =  ERCO , Year =  2024\n",
+      "Model =  MLP1 , BA =  FPL , Year =  2018\n",
+      "Model =  MLP1 , BA =  FPL , Year =  2019\n",
+      "Model =  MLP1 , BA =  FPL , Year =  2020\n",
+      "Model =  MLP1 , BA =  FPL , Year =  2021\n",
+      "Model =  MLP1 , BA =  FPL , Year =  2022\n",
+      "Model =  MLP1 , BA =  FPL , Year =  2023\n",
+      "Model =  MLP1 , BA =  FPL , Year =  2024\n",
+      "Model =  MLP1 , BA =  ISNE , Year =  2018\n",
+      "Model =  MLP1 , BA =  ISNE , Year =  2019\n",
+      "Model =  MLP1 , BA =  ISNE , Year =  2020\n",
+      "Model =  MLP1 , BA =  ISNE , Year =  2021\n",
+      "Model =  MLP1 , BA =  ISNE , Year =  2022\n",
+      "Model =  MLP1 , BA =  ISNE , Year =  2023\n",
+      "Model =  MLP1 , BA =  ISNE , Year =  2024\n",
+      "Model =  MLP1 , BA =  PJM , Year =  2018\n",
+      "Model =  MLP1 , BA =  PJM , Year =  2019\n",
+      "Model =  MLP1 , BA =  PJM , Year =  2020\n",
+      "Model =  MLP1 , BA =  PJM , Year =  2021\n",
+      "Model =  MLP1 , BA =  PJM , Year =  2022\n",
+      "Model =  MLP1 , BA =  PJM , Year =  2023\n",
+      "Model =  MLP1 , BA =  PJM , Year =  2024\n",
+      "Model =  MLP1 , BA =  SWPP , Year =  2018\n",
+      "Model =  MLP1 , BA =  SWPP , Year =  2019\n",
+      "Model =  MLP1 , BA =  SWPP , Year =  2020\n",
+      "Model =  MLP1 , BA =  SWPP , Year =  2021\n",
+      "Model =  MLP1 , BA =  SWPP , Year =  2022\n",
+      "Model =  MLP1 , BA =  SWPP , Year =  2023\n",
+      "Model =  MLP1 , BA =  SWPP , Year =  2024\n",
+      "Model =  MLP2 , BA =  AZPS , Year =  2019\n",
+      "Model =  MLP2 , BA =  AZPS , Year =  2020\n",
+      "Model =  MLP2 , BA =  AZPS , Year =  2021\n",
+      "Model =  MLP2 , BA =  AZPS , Year =  2022\n",
+      "Model =  MLP2 , BA =  AZPS , Year =  2023\n",
+      "Model =  MLP2 , BA =  AZPS , Year =  2024\n",
+      "Model =  MLP2 , BA =  BPAT , Year =  2019\n",
+      "Model =  MLP2 , BA =  BPAT , Year =  2020\n",
+      "Model =  MLP2 , BA =  BPAT , Year =  2021\n",
+      "Model =  MLP2 , BA =  BPAT , Year =  2022\n",
+      "Model =  MLP2 , BA =  BPAT , Year =  2023\n",
+      "Model =  MLP2 , BA =  BPAT , Year =  2024\n",
+      "Model =  MLP2 , BA =  CISO , Year =  2019\n",
+      "Model =  MLP2 , BA =  CISO , Year =  2020\n",
+      "Model =  MLP2 , BA =  CISO , Year =  2021\n",
+      "Model =  MLP2 , BA =  CISO , Year =  2022\n",
+      "Model =  MLP2 , BA =  CISO , Year =  2023\n",
+      "Model =  MLP2 , BA =  CISO , Year =  2024\n",
+      "Model =  MLP2 , BA =  ERCO , Year =  2019\n",
+      "Model =  MLP2 , BA =  ERCO , Year =  2020\n",
+      "Model =  MLP2 , BA =  ERCO , Year =  2021\n",
+      "Model =  MLP2 , BA =  ERCO , Year =  2022\n",
+      "Model =  MLP2 , BA =  ERCO , Year =  2023\n",
+      "Model =  MLP2 , BA =  ERCO , Year =  2024\n",
+      "Model =  MLP2 , BA =  FPL , Year =  2019\n",
+      "Model =  MLP2 , BA =  FPL , Year =  2020\n",
+      "Model =  MLP2 , BA =  FPL , Year =  2021\n",
+      "Model =  MLP2 , BA =  FPL , Year =  2022\n",
+      "Model =  MLP2 , BA =  FPL , Year =  2023\n",
+      "Model =  MLP2 , BA =  FPL , Year =  2024\n",
+      "Model =  MLP2 , BA =  ISNE , Year =  2019\n",
+      "Model =  MLP2 , BA =  ISNE , Year =  2020\n",
+      "Model =  MLP2 , BA =  ISNE , Year =  2021\n",
+      "Model =  MLP2 , BA =  ISNE , Year =  2022\n",
+      "Model =  MLP2 , BA =  ISNE , Year =  2023\n",
+      "Model =  MLP2 , BA =  ISNE , Year =  2024\n",
+      "Model =  MLP2 , BA =  PJM , Year =  2019\n",
+      "Model =  MLP2 , BA =  PJM , Year =  2020\n",
+      "Model =  MLP2 , BA =  PJM , Year =  2021\n",
+      "Model =  MLP2 , BA =  PJM , Year =  2022\n",
+      "Model =  MLP2 , BA =  PJM , Year =  2023\n",
+      "Model =  MLP2 , BA =  PJM , Year =  2024\n",
+      "Model =  MLP2 , BA =  SWPP , Year =  2019\n",
+      "Model =  MLP2 , BA =  SWPP , Year =  2020\n",
+      "Model =  MLP2 , BA =  SWPP , Year =  2021\n",
+      "Model =  MLP2 , BA =  SWPP , Year =  2022\n",
+      "Model =  MLP2 , BA =  SWPP , Year =  2023\n",
+      "Model =  MLP2 , BA =  SWPP , Year =  2024\n",
+      "Model =  MLP3 , BA =  AZPS , Year =  2020\n",
+      "Model =  MLP3 , BA =  AZPS , Year =  2021\n",
+      "Model =  MLP3 , BA =  AZPS , Year =  2022\n",
+      "Model =  MLP3 , BA =  AZPS , Year =  2023\n",
+      "Model =  MLP3 , BA =  AZPS , Year =  2024\n",
+      "Model =  MLP3 , BA =  BPAT , Year =  2020\n",
+      "Model =  MLP3 , BA =  BPAT , Year =  2021\n",
+      "Model =  MLP3 , BA =  BPAT , Year =  2022\n",
+      "Model =  MLP3 , BA =  BPAT , Year =  2023\n",
+      "Model =  MLP3 , BA =  BPAT , Year =  2024\n",
+      "Model =  MLP3 , BA =  CISO , Year =  2020\n",
+      "Model =  MLP3 , BA =  CISO , Year =  2021\n",
+      "Model =  MLP3 , BA =  CISO , Year =  2022\n",
+      "Model =  MLP3 , BA =  CISO , Year =  2023\n",
+      "Model =  MLP3 , BA =  CISO , Year =  2024\n",
+      "Model =  MLP3 , BA =  ERCO , Year =  2020\n",
+      "Model =  MLP3 , BA =  ERCO , Year =  2021\n",
+      "Model =  MLP3 , BA =  ERCO , Year =  2022\n",
+      "Model =  MLP3 , BA =  ERCO , Year =  2023\n",
+      "Model =  MLP3 , BA =  ERCO , Year =  2024\n",
+      "Model =  MLP3 , BA =  FPL , Year =  2020\n",
+      "Model =  MLP3 , BA =  FPL , Year =  2021\n",
+      "Model =  MLP3 , BA =  FPL , Year =  2022\n",
+      "Model =  MLP3 , BA =  FPL , Year =  2023\n",
+      "Model =  MLP3 , BA =  FPL , Year =  2024\n",
+      "Model =  MLP3 , BA =  ISNE , Year =  2020\n",
+      "Model =  MLP3 , BA =  ISNE , Year =  2021\n",
+      "Model =  MLP3 , BA =  ISNE , Year =  2022\n",
+      "Model =  MLP3 , BA =  ISNE , Year =  2023\n",
+      "Model =  MLP3 , BA =  ISNE , Year =  2024\n",
+      "Model =  MLP3 , BA =  PJM , Year =  2020\n",
+      "Model =  MLP3 , BA =  PJM , Year =  2021\n",
+      "Model =  MLP3 , BA =  PJM , Year =  2022\n",
+      "Model =  MLP3 , BA =  PJM , Year =  2023\n",
+      "Model =  MLP3 , BA =  PJM , Year =  2024\n",
+      "Model =  MLP3 , BA =  SWPP , Year =  2020\n",
+      "Model =  MLP3 , BA =  SWPP , Year =  2021\n",
+      "Model =  MLP3 , BA =  SWPP , Year =  2022\n",
+      "Model =  MLP3 , BA =  SWPP , Year =  2023\n",
+      "Model =  MLP3 , BA =  SWPP , Year =  2024\n",
+      "Model =  MLP4 , BA =  AZPS , Year =  2021\n",
+      "Model =  MLP4 , BA =  AZPS , Year =  2022\n",
+      "Model =  MLP4 , BA =  AZPS , Year =  2023\n",
+      "Model =  MLP4 , BA =  AZPS , Year =  2024\n",
+      "Model =  MLP4 , BA =  BPAT , Year =  2021\n",
+      "Model =  MLP4 , BA =  BPAT , Year =  2022\n",
+      "Model =  MLP4 , BA =  BPAT , Year =  2023\n",
+      "Model =  MLP4 , BA =  BPAT , Year =  2024\n",
+      "Model =  MLP4 , BA =  CISO , Year =  2021\n",
+      "Model =  MLP4 , BA =  CISO , Year =  2022\n",
+      "Model =  MLP4 , BA =  CISO , Year =  2023\n",
+      "Model =  MLP4 , BA =  CISO , Year =  2024\n",
+      "Model =  MLP4 , BA =  ERCO , Year =  2021\n",
+      "Model =  MLP4 , BA =  ERCO , Year =  2022\n",
+      "Model =  MLP4 , BA =  ERCO , Year =  2023\n",
+      "Model =  MLP4 , BA =  ERCO , Year =  2024\n",
+      "Model =  MLP4 , BA =  FPL , Year =  2021\n",
+      "Model =  MLP4 , BA =  FPL , Year =  2022\n",
+      "Model =  MLP4 , BA =  FPL , Year =  2023\n",
+      "Model =  MLP4 , BA =  FPL , Year =  2024\n",
+      "Model =  MLP4 , BA =  ISNE , Year =  2021\n",
+      "Model =  MLP4 , BA =  ISNE , Year =  2022\n",
+      "Model =  MLP4 , BA =  ISNE , Year =  2023\n",
+      "Model =  MLP4 , BA =  ISNE , Year =  2024\n",
+      "Model =  MLP4 , BA =  PJM , Year =  2021\n",
+      "Model =  MLP4 , BA =  PJM , Year =  2022\n",
+      "Model =  MLP4 , BA =  PJM , Year =  2023\n",
+      "Model =  MLP4 , BA =  PJM , Year =  2024\n",
+      "Model =  MLP4 , BA =  SWPP , Year =  2021\n",
+      "Model =  MLP4 , BA =  SWPP , Year =  2022\n",
+      "Model =  MLP4 , BA =  SWPP , Year =  2023\n",
+      "Model =  MLP4 , BA =  SWPP , Year =  2024\n",
+      "Model =  MLP5 , BA =  AZPS , Year =  2022\n",
+      "Model =  MLP5 , BA =  AZPS , Year =  2023\n",
+      "Model =  MLP5 , BA =  AZPS , Year =  2024\n",
+      "Model =  MLP5 , BA =  BPAT , Year =  2022\n",
+      "Model =  MLP5 , BA =  BPAT , Year =  2023\n",
+      "Model =  MLP5 , BA =  BPAT , Year =  2024\n",
+      "Model =  MLP5 , BA =  CISO , Year =  2022\n",
+      "Model =  MLP5 , BA =  CISO , Year =  2023\n",
+      "Model =  MLP5 , BA =  CISO , Year =  2024\n",
+      "Model =  MLP5 , BA =  ERCO , Year =  2022\n",
+      "Model =  MLP5 , BA =  ERCO , Year =  2023\n",
+      "Model =  MLP5 , BA =  ERCO , Year =  2024\n",
+      "Model =  MLP5 , BA =  FPL , Year =  2022\n",
+      "Model =  MLP5 , BA =  FPL , Year =  2023\n",
+      "Model =  MLP5 , BA =  FPL , Year =  2024\n",
+      "Model =  MLP5 , BA =  ISNE , Year =  2022\n",
+      "Model =  MLP5 , BA =  ISNE , Year =  2023\n",
+      "Model =  MLP5 , BA =  ISNE , Year =  2024\n",
+      "Model =  MLP5 , BA =  PJM , Year =  2022\n",
+      "Model =  MLP5 , BA =  PJM , Year =  2023\n",
+      "Model =  MLP5 , BA =  PJM , Year =  2024\n",
+      "Model =  MLP5 , BA =  SWPP , Year =  2022\n",
+      "Model =  MLP5 , BA =  SWPP , Year =  2023\n",
+      "Model =  MLP5 , BA =  SWPP , Year =  2024\n",
+      "Model =  MLP6 , BA =  AZPS , Year =  2023\n",
+      "Model =  MLP6 , BA =  AZPS , Year =  2024\n",
+      "Model =  MLP6 , BA =  BPAT , Year =  2023\n",
+      "Model =  MLP6 , BA =  BPAT , Year =  2024\n",
+      "Model =  MLP6 , BA =  CISO , Year =  2023\n",
+      "Model =  MLP6 , BA =  CISO , Year =  2024\n",
+      "Model =  MLP6 , BA =  ERCO , Year =  2023\n",
+      "Model =  MLP6 , BA =  ERCO , Year =  2024\n",
+      "Model =  MLP6 , BA =  FPL , Year =  2023\n",
+      "Model =  MLP6 , BA =  FPL , Year =  2024\n",
+      "Model =  MLP6 , BA =  ISNE , Year =  2023\n",
+      "Model =  MLP6 , BA =  ISNE , Year =  2024\n",
+      "Model =  MLP6 , BA =  PJM , Year =  2023\n",
+      "Model =  MLP6 , BA =  PJM , Year =  2024\n",
+      "Model =  MLP6 , BA =  SWPP , Year =  2023\n",
+      "Model =  MLP6 , BA =  SWPP , Year =  2024\n",
+      "Model =  MLP7 , BA =  AZPS , Year =  2024\n",
+      "Model =  MLP7 , BA =  BPAT , Year =  2024\n",
+      "Model =  MLP7 , BA =  CISO , Year =  2024\n",
+      "Model =  MLP7 , BA =  ERCO , Year =  2024\n",
+      "Model =  MLP7 , BA =  FPL , Year =  2024\n",
+      "Model =  MLP7 , BA =  ISNE , Year =  2024\n",
+      "Model =  MLP7 , BA =  PJM , Year =  2024\n",
+      "Model =  MLP7 , BA =  SWPP , Year =  2024\n"
+     ]
+    }
+   ],
    "source": [
     "# Run the forward projection step iteratively across all training windows and BAs:\n",
-    "for model in ['MLP1', 'MLP2', 'MLP3', 'MLP4', 'MLP5', 'MLP6']:\n",
+    "for model in ['MLP1', 'MLP2', 'MLP3', 'MLP4', 'MLP5', 'MLP6', 'MLP7']:\n",
     "    # Set the first forward year for each model:\n",
     "    if model == 'MLP1':\n",
     "       first_forward_year = 2018\n",
@@ -697,6 +995,8 @@
     "       first_forward_year = 2022\n",
     "    if model == 'MLP6':\n",
     "       first_forward_year = 2023\n",
+    "    if model == 'MLP7':\n",
+    "       first_forward_year = 2024\n",
     "\n",
     "    # Create the model output directory name:\n",
     "    output_directory = (model_output_directory + model + '/')\n",
@@ -708,8 +1008,8 @@
     "    # Loop over the eight BAs used in this LDRD analysis:\n",
     "    for ba in bas:\n",
     "\n",
-    "        # Loop over the years from the first forward year for that model through 2023:\n",
-    "        for year in range(first_forward_year,2024,1):\n",
+    "        # Loop over the years from the first forward year for that model through 2024:\n",
+    "        for year in range(first_forward_year,2025,1):\n",
     "        \n",
     "            # Run the MLP forward projection for that BA, model, and year:\n",
     "            pdf = tell.predict(region = ba,\n",
@@ -734,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "cfabb7ae-23a8-44ce-9c46-f148ab52f849",
    "metadata": {},
    "outputs": [],
@@ -765,7 +1065,7 @@
     "    base_df = base_df[['BA', 'Time_UTC', 'T2', 'Q2', 'SWDOWN', 'GLW', 'WSPD', 'Population', 'Demand_MWh']].copy()\n",
     "\n",
     "    # Loop over the different models and merge in their demand projections iteratively:\n",
-    "    for model in ['MLP1', 'MLP2', 'MLP3', 'MLP4', 'MLP5', 'MLP6']:\n",
+    "    for model in ['MLP1', 'MLP2', 'MLP3', 'MLP4', 'MLP5', 'MLP6', 'MLP7']:\n",
     "\n",
     "        # Set the first forward year for each model:\n",
     "        if model == 'MLP1':\n",
@@ -780,9 +1080,11 @@
     "           first_forward_year = 2022\n",
     "        if model == 'MLP6':\n",
     "           first_forward_year = 2023\n",
+    "        if model == 'MLP7':\n",
+    "           first_forward_year = 2024\n",
     "\n",
-    "        # Loop over the years from the first forward year for that model through 2023:\n",
-    "        for year in range(first_forward_year,2024,1):\n",
+    "        # Loop over the years from the first forward year for that model through 2024:\n",
+    "        for year in range(first_forward_year,2025,1):\n",
     "\n",
     "            # Load in the MLP projection for that model and year combination:\n",
     "            proj_df = pd.read_csv((prediction_output_directory + model + '/' + str(year) + '/' + ba  + '_' + str(year) + '_mlp_output.csv'), index_col=None, header=0)\n",
